Fixed basic stylings of Jumbotron, Navbar collapse, and media query issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,9 +39,9 @@ body {
 }
 
 .jumbotron {
-    background-image: url('https://i.imgur.com/s4iVpqn.jpg');
-    background-size: cover;
-    height: 100%;
+    background-image: url('fistbump.png');
+    background-size: 100% 100%;
+    height: 15rem;
     opacity: 1;
 }
 
@@ -75,5 +75,9 @@ body {
     width: 100%;
     left: 0;
     bottom: 0;
+    text-align: center;
+}
+
+.navbar-header {
     text-align: center;
 }
